Fixing wrong font size in table

--- a/css/naked.css
+++ b/css/naked.css
@@ -1049,6 +1049,7 @@ footer {
 
 table,
 .table {
+  font-size: 1em;
   width: 100%;
   border-collapse: collapse;
   border-spacing: 0;
