--- a/scss/include/_table.scss
+++ b/scss/include/_table.scss
@@ -21,6 +21,7 @@
 
 table,
 .table {
+	font-size: 1em;
 	width: 100%;
 	border-collapse: collapse;
 	border-spacing: 0;
